# Crabmate

./: .gitignore  Cargo.toml  README.md  launch.cmd
assets/: black.aseprite  white.aseprite
crabmate_ai_minimax/: Cargo.toml
crabmate_ai_minimax/src/: plugin.rs
crabmate_ai_random/: Cargo.toml
crabmate_ai_random/src/: chess_player_ai_random.rs  lib.rs  plugin.rs
crabmate_chess/: Cargo.toml
crabmate_chess/src/: basic.rs  chess_board.rs  chess_pieces.rs  constants.rs  errors.rs  events.rs  lib.rs  plugin.rs
crabmate_chess/src/basic/: basic_chess_board.rs
crabmate_chess/src/model/: chess_board.rs  chess_cell.rs  chess_coord.rs  chess_id.rs  chess_pieces.rs  chess_team.rs  mod.rs
crabmate_chess/src/model/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  moves_possibilities.rs  pawn.rs  queen.rs  rook.rs  traits.rs
crabmate_chess/src/utils/: bijection_map.rs  mod.rs
crabmate_gameplay/: Cargo.toml
crabmate_gameplay/src/: lib.rs
crabmate_interaction/: Cargo.toml
crabmate_interaction/src/: component.rs  plugin.rs
src/: application.rs  display.rs  events.rs  main.rs  ui.rs
src/application/: components.rs  piece_entity.rs  plugin.rs
src/constants/: application_constants.rs
src/display/: debug.rs  plugin.rs
src/display/debug/: fps_plugin.rs  plugin.rs
src/ui/menu/main_menu/: components.rs  plugin.rs  styles.rs
src/ui/menu/main_menu/systems/: interactions.rs  layout.rs
